--- a/style.css
+++ b/style.css
@@ -3,16 +3,27 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-color: black;
 }
 /* main */
 main{ 
     height: calc(100vh- 81px);
     flex-grow: 1;
-    width: 100%;
+    width: 100vw;
     background-color: black;
+    
+}
+.test{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2px 10px;
+    margin: 78px 89px 28px 89px;
+
 }
 .caselle{
     position: relative;
+    
 }
 img{
     max-width: 245px;
@@ -22,21 +33,38 @@ p{
     position: absolute;
     color: white;
     background-color: rgba(0,0,0,0.3);
-    bottom: 2px;  
+    top: 94px;  
     padding-left: 20px; 
     font-size: 15px;
 }
-i{
+.mic-slash{
     position: absolute;
     color: white;
     left: -3px;
-    bottom: 19px;
+    top: 110px;
     font-size: 15px;
     padding-left: 3px;
 }
 
 footer{
     width: 100%;
-    height: 81px;
-    border: solid red 1px;
+    height: 81px; 
+    display: flex; 
+    flex-direction: row;
+    background-color: gray;
+    justify-content: space-between;
+}
+.end-call{
+    background-color: gray;
+    color: red;
+    padding: 10px;
+    text-align: center;
+}
+.call-buttom{
+    color: white;
+}
+.mic{
+    font-size: 20px;
+    text-align: center;
+
 }
